<resources>
    <string name="app_name">uplbtrade</string>
    <string name="home">Home</string>
    <string name="inbox">Inbox</string>
    <string name="offers">Offers</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="item_name">Name</string>
    <string name="item_desc">Description</string>
    <string name="item_price">Price</string>
    <string name="item_condition">Condition</string>
    <string name="add">Add</string>
    <string name="item_image">Image</string>
    <string name="cancel">Cancel</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="contact_number">Contact Number</string>
    <string name="search">Search Items</string>
    <string name="search_venue">Search Venues</string>
    <string name="recommended">Recommended Items</string>
    <string name="buying">Buying</string>
    <string name="selling">Selling</string>
    <string name="edit_item">Edit Item</string>
    <string name="delete_item">Delete item</string>
    <string name="make_offer">Make Offer</string>
    <string name="offer_status">Offer Status</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="title_activity_maps">Map</string>
    <string name="settings">Settings</string>
    <string name="offer_message">Message</string>
    <string name="see_offer">See Offer</string>
    <string name="offer_image">Offer Image</string>
    <string name="price">Price</string>
    <string name="message">Message</string>
    <string name="meet_up">Set Meet-Up</string>
    <string name="venue">Set Venue</string>
    <string name="confirm">Confirm</string>
    <string name="date">Set Date</string>
    <string name="date_time">Set Date/Time</string>
    <string name="time">Set Time</string>
    <string name="warning">UPLB Trade encourages customers to set meet-ups within the campus and between 7 am and 7 pm. Always exercise caution when meeting with other customers.</string>
    <string name="map_query">Enter Venue</string>
    <string name="edit_meet_up">edit meet-up</string>
    <string name="complaint">Type complaint here…</string>
    <string name="edit_profile">edit profile</string>
    <string name="flag">flag</string>
    <string name="purchases">Purchases</string>
    <string name="send">send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tag">The university e-marketplace</string>
    <string name="add_item">add item</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_rate_app">RateAppActivity</string>
    <string name="title_activity_review_app">ReviewAppActivity</string>
    <string name="review_prompt">Rate our application from 1 to 5 and give us your feedback!</string>
    <string name="comment">Leave a comment below.</string>
    <string name="submit">submit</string>
    <string name="rate">rate</string>
    <string name="customer_review_prompt">From 1 to 5 how satisfied are you with this transaction?</string>
    <string name="original_offer">Original Offer:</string>
    <string name="customer_offer">Customer\'s Offer:</string>
    <string name="add_friend">add friend</string>
    <string name="chat_image">chat image</string>
    <string name="enter_message">Enter Message</string>
    <string name="cancel_order">cancel order</string>
    <string name="rotate_picture">rotate picture</string>
    <string name="add_tag">add tag</string>
    <string name="delete_tag">delete tag</string>
    <string name="write_a_tag">Write a Tag…</string>
    <string name="write_a_review">Write a Review…</string>
    <string name="delete_images">delete images</string>
    <string name="show_recommended">show recommended</string>
    <string name="info">info</string>
</resources>
