<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_inbox"
        android:icon="@android:drawable/ic_dialog_email"
        android:title="@string/inbox" />

    <item
        android:id="@+id/navigation_offers"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/offers" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/profile" />

    <item
        android:id="@+id/navigation_purchases"
        android:icon="@drawable/purchase"
        android:title="@string/purchases"/>
</menu>
