<?xml version="1.0" encoding="utf-8"?>
<!-- Add Item Layout-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <!-- Item image -->
        <ImageSwitcher
            android:id="@+id/item_img"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/item_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/previous"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/previous"
            app:layout_constraintStart_toStartOf="@id/rotate"
            app:layout_constraintTop_toBottomOf="@id/add_item_img">
        </Button>

        <Button
            android:id="@+id/next"
            android:layout_width="90dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="@id/add_item_img"
            app:layout_constraintTop_toBottomOf="@id/add_item_img" />

        <!-- Rotate the picture -->
        <ImageButton
            android:id="@+id/rotate"
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="8dp"
            android:background="@color/maroon"
            android:contentDescription="@string/rotate_picture"
            android:src="@android:drawable/ic_menu_rotate"
            app:layout_constraintBottom_toBottomOf="@id/item_img"
            app:layout_constraintEnd_toStartOf="@id/item_img"
            app:tint="@color/white"
            tools:ignore="ImageContrastCheck"
            tools:src="@android:drawable/ic_menu_rotate" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_item_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:contentDescription="@string/add_item"
            android:focusable="true"
            android:src="@android:drawable/ic_menu_camera"
            android:tint="@color/white"
            app:fabSize="normal"
            app:layout_constraintEnd_toEndOf="@+id/item_name"
            app:layout_constraintBottom_toBottomOf="@id/item_img"
            tools:ignore="ImageContrastCheck" />

        <!-- Item name -->
        <EditText
            android:id="@+id/item_name"
            android:layout_width="395dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/item_name"
            android:inputType="text"
            android:autofillHints="@string/item_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/next" />

        <!-- item description -->
        <EditText
            android:id="@+id/item_desc"
            android:layout_width="395dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/item_desc"
            android:inputType="textMultiLine"
            android:lines="4"
            android:minLines="4"
            android:maxLines="4"
            android:gravity="top"
            android:autofillHints="@string/item_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_name" />

        <!-- Offer price -->
        <EditText
            android:id="@+id/offer"
            android:layout_width="395dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/item_price"
            android:inputType="numberDecimal"
            android:autofillHints="@string/price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_desc" />

        <!-- Item condition -->
        <Spinner
            android:id="@+id/item_condition"
            android:layout_width="395dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/item_condition"
            android:autofillHints="condition"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tags"
            app:layout_constraintTop_toBottomOf="@+id/offer"
            tools:layout_editor_absoluteX="8dp" />

        <!-- Item tags -->
        <EditText
            android:id="@+id/tags"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/write_a_tag"
            android:inputType="text"
            android:autofillHints="tags"
            app:layout_constraintStart_toStartOf="@id/item_condition"
            app:layout_constraintEnd_toStartOf="@id/add_tag"
            app:layout_constraintTop_toBottomOf="@+id/item_condition" />

        <!-- add tag -->
        <ImageButton
            android:id="@+id/add_tag"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/orange"
            android:contentDescription="@string/add_tag"
            android:src="@android:drawable/ic_input_add"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:tint="@color/white"
            app:layout_constraintEnd_toStartOf="@id/delete_tag"
            app:layout_constraintTop_toBottomOf="@+id/item_condition"
            android:clickable="true"
            android:focusable="true"/>

        <!-- delete tag -->
        <ImageButton
            android:id="@+id/delete_tag"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@color/maroon"
            android:contentDescription="@string/delete_tag"
            android:fontFamily="sans-serif"
            android:src="@android:drawable/ic_delete"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="@id/item_condition"
            app:layout_constraintTop_toBottomOf="@+id/item_condition"
            app:tint="@color/white" />

        <!-- Tag list -->
        <ListView
            android:id="@+id/tag_list"
            android:layout_width="395dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:scrollbars="horizontal"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tags"
            app:layout_constraintBottom_toTopOf="@id/cancel"
            />

        <!-- Save/add item -->
        <Button
            android:id="@+id/add_item"
            android:layout_width="90dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/item_condition"
            app:layout_constraintTop_toBottomOf="@+id/tag_list" />

        <!-- Cancel button -->
        <Button
            android:id="@+id/cancel"
            android:layout_width="90dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/item_condition"
            app:layout_constraintTop_toBottomOf="@+id/tag_list" />

</androidx.constraintlayout.widget.ConstraintLayout>