<?xml version="1.0" encoding="utf-8"?>
<!-- Edit item details -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Item image -->
    <ImageView
        android:id="@+id/item_img"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?attr/colorBackgroundFloating"
        android:contentDescription="@string/item_image"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Edit Item FAB -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_item_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/edit_item"
        android:focusable="true"
        android:tint="@color/off_white"
        android:src="@android:drawable/ic_menu_camera"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="@+id/item_img"
        app:layout_constraintEnd_toEndOf="@+id/item_name"
        app:layout_constraintStart_toEndOf="@+id/item_img" />

    <!-- Item owner's name -->
    <TextView
        android:id="@+id/item_owner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
         />

    <!-- Item name -->
    <EditText
        android:id="@+id/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:gravity="center"
        android:hint="@string/item_name"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:autofillHints="@string/item_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_img" />

    <!-- Description -->
    <EditText
        android:id="@+id/item_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:gravity="center"
        android:hint="@string/item_desc"
        android:inputType="textMultiLine"
        android:lines="4"
        android:maxLines="4"
        android:minLines="4"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:autofillHints="@string/item_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_name" />

        <!-- Offer price -->
    <EditText
        android:id="@+id/offer"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:gravity="center"
        android:hint="@string/item_price"
        android:inputType="text|numberDecimal"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:autofillHints="@string/price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_desc" />

    <!-- Item condition -->
    <Spinner
        android:id="@+id/item_condition"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="condition"
        android:contentDescription="@string/item_condition"
        app:layout_constraintTop_toBottomOf="@+id/offer" />

    <!-- Item tags -->
    <EditText
        android:id="@+id/add_tags"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="Tags"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_condition" />

    <ListView
        android:id="@+id/tags"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        android:padding="8dp"
        android:scrollbars="horizontal"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/item_owner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_tags" />

    <!-- add tag -->
    <Button
        android:id="@+id/add_tag"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="@color/orange"
        android:foreground="@android:drawable/ic_input_add"
        android:foregroundTint="@color/white"
        android:textAlignment="center"
        android:contentDescription="add tag"
        android:clickable="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toEndOf="@+id/add_tags"
        app:layout_constraintTop_toBottomOf="@+id/item_condition"/>

    <!-- delete tag -->
    <Button
        android:id="@+id/delete_tag"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@color/maroon"
        android:fontFamily="sans-serif"
        android:foreground="@android:drawable/ic_delete"
        android:foregroundTint="@color/white"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="8sp"
        android:typeface="sans"
        android:clickable="true"
        android:contentDescription="delete tag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_tag"
        app:layout_constraintTop_toBottomOf="@+id/item_condition" />

        <!-- Save the item's details -->
    <Button
        android:id="@+id/save_item"
        android:layout_width="71dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/item_owner"
        android:layout_marginBottom="16dp"
        />

        <!-- Cancel button -->
    <Button
        android:id="@+id/cancel"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/item_owner"
        android:layout_marginBottom="16dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>