<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ReportItemActivity">

    <!-- Item Image -->
    <ImageView
        android:id="@+id/item_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/item_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </ImageView>

    <!-- Item name -->
    <TextView
        android:id="@+id/item_name"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintStart_toEndOf="@+id/item_image"
        app:layout_constraintTop_toTopOf="@+id/item_image"
        >
    </TextView>

    <!-- Item Owner -->
    <TextView
        android:id="@+id/item_owner"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintStart_toEndOf="@+id/item_image"
        app:layout_constraintTop_toBottomOf="@+id/item_name" />

    <!-- Complaint -->
    <EditText
        android:id="@+id/report"
        android:layout_width="395dp"
        android:layout_height="200dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/complaint"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:lines="4"
        android:maxLines="4"
        android:minLines="4"
        app:layout_constraintStart_toStartOf="@id/item_image"
        app:layout_constraintTop_toBottomOf="@+id/item_image"
        android:autofillHints="no" />

    <!-- Send report button -->
    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/send"
        android:textColor="@color/dark_grey"
        app:backgroundTint="@color/silver"
        app:layout_constraintEnd_toEndOf="@+id/report"
        app:layout_constraintTop_toBottomOf="@+id/report" />

    <!-- cancel report button -->
    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        android:textColor="@color/dark_grey"
        app:backgroundTint="@color/silver"
        app:layout_constraintStart_toStartOf="@+id/report"
        app:layout_constraintTop_toBottomOf="@+id/report" />

</androidx.constraintlayout.widget.ConstraintLayout>